--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -25,8 +25,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="articulos.html">Artículos</a>
-            </li>
+                <a class="nav-link" href="Articulos.html">Artículos</a>
             <li class="nav-item active">
                 <a class="nav-link" href="AcercaDe.html">Acerca de</a>
             </li>
