--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="navbar-nav">
 <li class="nav-item active">
-        <a class="nav-link" href="#">Inicio</a>
+        <a class="nav-link" href="index.html">Inicio</a>
 </li>
 <li class="nav-item">
-        <a class="nav-link" href="#">Artículos</a>
+        <a class="nav-link" href="Articulos.html">Artículos</a>
 </li>
 <li class="nav-item">
-        <a class="nav-link" href="#">Acerca de</a>
+        <a class="nav-link" href="AcercaDe.html">Acerca de</a>
 </li>
 </ul>
 </div>
@@ -36,7 +36,23 @@
 <div class="container mt-4">
 <h1 class="display-4">Bienvenidos a la Wiki de Fútbol Soccer</h1>
 <p class="lead">Explora la historia, las reglas y las leyendas del fútbol soccer.</p>
-<!-- Aquí puedes añadir más contenido destacado o reciente -->
+
+<!-- Sección de artículos -->
+<div class="row">
+        <!-- Artículo 1 -->
+        <div class="col-md-4">
+        <div class="card">
+                <img class="card-img-top" src="imagen_del_articulo1.jpg" alt="Imagen del Artículo 1">
+                <div class="card-body">
+                <h5 class="card-title">Título del Artículo 1</h5>
+                <p class="card-text">Resumen del artículo con al menos 800 palabras...</p>
+                <a href="Articulos.html" class="btn btn-primary">Leer más</a>
+                </div>
+        </div>
+        </div>
+        <!-- Repite el bloque anterior para cada uno de los 20 artículos -->
+        <!-- ... -->
+</div>
 </div>
 
 <!-- Pie de página -->
